# clionprojects

./: .gitignore
MyPlugin/: .gitignore  CMakeLists.txt  EntryPoints.cpp  MyPluginPlugin.cpp  MyPluginPlugin.h  OrthancContext.cpp  OrthancContext.h
MyPlugin/Resources/: Configuration.cpp  Configuration.h  OrthancPluginCppWrapper.cpp  OrthancPluginCppWrapper.h  Toolbox.cpp
VtkPlugin/: CMakeLists.txt  VtkPlugin.cpp  VtkPlugin.h
VtkPlugin/Resources/: BoostConfiguration.cmake
dicomToItk/: .gitignore  CMakeLists.txt  dicomToItk.cpp  dicomToItk.h
dicomToItk/cmake/: dicomtoitkConfig.cmake
